--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="main.css" >
     <title>hooter</title>
   </head>
   <body>
